# vk-intership-friends

./: .gitignore  README.md  docker-compose.yml
docs/: openapi.yml
provision/: django.py  docker.py  git.py  project.py
server/: pyproject.toml  setup.cfg
server/apps/core/services/: __init__.py
server/apps/core/viewsets/: __init__.py  create_read.py  create_read_list.py
server/apps/friends/: apps.py
server/apps/friends/admin/: __init__.py  invite.py
server/apps/friends/factories/: __init__.py  invite.py
server/apps/friends/migrations/: 0001_initial.py
server/apps/friends/models/: __init__.py  invite.py
server/apps/friends/permissions/: __init__.py  invite.py
server/apps/friends/serializers/: __init__.py  invite.py
server/apps/friends/signals/: __init__.py  mutual_accept_friend_invite.py
server/apps/friends/tests/: test_invite.py
server/apps/friends/viewsets/: __init__.py  invite.py
server/apps/users/admin/: __init__.py
server/apps/users/constants/: __init__.py  statuses.py
server/apps/users/factories/: __init__.py  user.py
server/apps/users/migrations/: 0001_initial.py
server/apps/users/models/: user.py
server/apps/users/permissions/: __init__.py  user.py
server/apps/users/serializers/: user.py
server/apps/users/tests/: test_user.py
server/apps/users/viewsets/: user.py
server/config/: api_router.py
server/config/settings/: __init__.py  drf.py  installed_apps.py  settings.py
server/config/tests/: __init__.py
